# simple_tilemap

./: CMakeLists.txt
include/: app.h  edge_detector.h  tile_manager.h  utils.h
src/: app.cpp  edge_detector.cpp  main.cpp  tile_manager.cpp  utils.cpp
